User register, login and logoff

--- a/store_manager/apps/accounts/templates/accounts/login.html
+++ b/store_manager/apps/accounts/templates/accounts/login.html
@@ -1,10 +1,19 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block title %}Login - ADCD - StoreManager{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+    <h2>Login</h2>
+    <form method="POST" action="">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
 {% endblock %}
