--- a/store_manager/apps/accounts/templates/accounts/password_reset_email.html
+++ b/store_manager/apps/accounts/templates/accounts/password_reset_email.html
@@ -1,7 +1,12 @@
-<p>Hi {{ user.get_full_name }},</p>
-<p>You're receiving this email because you requested a password reset for your account.</p>
-<p>Click the link below to reset your password:</p>
+{% autoescape off %}
+Hello {{ user.get_full_name }},
 
-<p><a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">Reset your password</a></p>
+You requested a password reset for your account on ADCD - StoreManager. Click the link below to reset your password:
 
-<p>If you didn't request this change, please ignore this email.</p>
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+
+If you didn't request this, you can ignore this email. Your password will remain the same.
+
+Best regards,
+The ADCD - StoreManager Team
+{% endautoescape %}
