--- a/store_manager/apps/accounts/templates/accounts/password_reset.html
+++ b/store_manager/apps/accounts/templates/accounts/password_reset.html
@@ -1,11 +1,17 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
-<h2>Password Reset</h2>
-<p>Enter your email address to receive a link to reset your password.</p>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.email.label_tag }} {{ form.email }}
-    <button type="submit">Send Reset Link</button>
-</form>
+<div class="container mt-5">
+    <h2 class="text-center">Reset Password</h2>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Send Reset Link</button>
+    </form>
+</div>
 {% endblock %}
