--- a/store_manager/templates/home.html
+++ b/store_manager/templates/home.html
@@ -1,10 +1,11 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block title %}Home - ADCD - StoreManager{% endblock %}
 
 {% block content %}
-<h2>Reset your password</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset Password</button>
-</form>
+    <div class="text-center">
+        <h1>Welcome to ADCD - StoreManager</h1>
+        <p>Manage your store efficiently and easily.</p>
+        <a href="{% url 'register' %}" class="btn btn-primary">Get Started</a>
+    </div>
 {% endblock %}
