--- a/store_manager/templates/menu.html
+++ b/store_manager/templates/menu.html
@@ -5,13 +5,16 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3">
-        <h3>Welcome, {{ user.get_full_name }} to ADCD - StoreManager</h3>
+        <h3>Welcome to ADCD - StoreManager</h3>
+        <div class="list-group">
+            <a href="{% url 'company_list' %}" class="list-group-item list-group-item-action">Company</a>
+        </div>
     </div>
     <div class="col-md-9">
         <div class="d-flex justify-content-end">
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="userProfile" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{ user.get_full_name }}'s Profile
+                    {{ request.user.get_full_name }}'s Profile
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="userProfile">
                     <li><a class="dropdown-item" href="{% url 'logout' %}">Log Off</a></li>
@@ -19,7 +22,9 @@
             </div>
         </div>
         <div class="mt-4">
-            <!-- Additional content can go here -->
+            {% block inner_content %}
+            <!-- Additional content will go here -->
+            {% endblock %}
         </div>
     </div>
 </div>
