--- a/store_manager/apps/companies/templates/company_list.html
+++ b/store_manager/apps/companies/templates/company_list.html
@@ -12,10 +12,18 @@
     </a>
 </div>
 
-<ul>
+<ul class="list-group">
     {% for company in companies %}
-        <li>
-            <a href="{% url 'branch_list' company.id %}">{{ company.name }}</a>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <!-- Company name, clickable for branch list -->
+            <a href="{% url 'branch_list' company.id %}" class="text-decoration-none">
+                {{ company.name }}
+            </a>
+
+            <!-- "Details" button aligned to the right side -->
+            <a href="{% url 'company_detail' company.id %}" class="btn btn-info btn-sm">
+                View Details
+            </a>
         </li>
     {% empty %}
         <li>No companies available.</li>
@@ -23,7 +31,7 @@
 </ul>
 
 <!-- Home button -->
-<a href="{% url 'menu' %}" class="btn btn-secondary">
+<a href="{% url 'menu' %}" class="btn btn-secondary mt-3">
     <i class="fas fa-home"></i> Menu
 </a>
 {% endblock %}
