--- a/store_manager/apps/accounts/templates/accounts/register.html
+++ b/store_manager/apps/accounts/templates/accounts/register.html
@@ -24,8 +24,8 @@
             <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="mb-3">
-            <label for="full_Name" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="full_Name" name="full_Name" required>
+            <label for="full_name" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="full_name" name="full_name" required> <!-- Updated to 'full_name' -->
         </div>
         <div class="mb-3">
             <label for="cpf" class="form-label">CPF</label>
