--- a/store_manager/templates/menu.html
+++ b/store_manager/templates/menu.html
@@ -13,12 +13,16 @@
     <div class="col-md-9">
         <div class="d-flex justify-content-end">
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="userProfile" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{ request.user.get_full_name }}'s Profile
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="userProfile">
-                    <li><a class="dropdown-item" href="{% url 'logout' %}">Log Off</a></li>
-                </ul>
+                {% if request.user.is_authenticated %}
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="userProfile" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ request.user.get_full_name }}'s Profile
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="userProfile">
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Log Off</a></li>
+                    </ul>
+                {% else %}
+                    <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+                {% endif %}
             </div>
         </div>
         <div class="mt-4">
