[Add] Tests to accounts(models/views), companies(models) and products(models)

--- a/store_manager/apps/accounts/templates/accounts/login.html
+++ b/store_manager/apps/accounts/templates/accounts/login.html
@@ -4,6 +4,15 @@
 
 {% block content %}
     <h2>Login</h2>
+
+    {% if messages %}
+        <div class="alert alert-warning" role="alert">
+            {% for message in messages %}
+                {{ message }}<br>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <form method="POST" action="">
         {% csrf_token %}
         <div class="mb-3">
