--- a/store_manager/apps/products/templates/delete_category.html
+++ b/store_manager/apps/products/templates/delete_category.html
@@ -11,6 +11,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Delete Category</button>
-    <a href="{% url 'category_detail' category.id %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'category_detail' category.slug %}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
