[Add] CRUD da Subcategory, e listar e adicionar produto

--- a/store_manager/apps/products/templates/category_list.html
+++ b/store_manager/apps/products/templates/category_list.html
@@ -15,7 +15,9 @@
 <ul class="list-group">
     {% for category in categories %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            <span>{{ category.name }}</span>
+            <a href="{% url 'subcategory_list' category.id %}" class="text-decoration-none">
+                {{ category.name }}
+            </a>
 
             <!-- "Details" button -->
             <a href="{% url 'category_detail' category.slug %}" class="btn btn-info btn-sm">
