--- a/store_manager/apps/products/templates/delete_category.html
+++ b/store_manager/apps/products/templates/delete_category.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 
-{% block title %}Delete Category - {{ category.name }}{% endblock %}
+{% block title %}Edit Category - {{ category.name }}{% endblock %}
 
 {% block content %}
-<h1>Delete Category - {{ category.name }}</h1>
-<p>Are you sure you want to delete this category?</p>
-<p><strong>Name:</strong> {{ category.name }}</p>
-<p><strong>Description:</strong> {{ category.description }}</p>
-
+<h1>Edit Category - {{ category.name }}</h1>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Delete Category</button>
-    <a href="{% url 'category_detail' category.slug %}" class="btn btn-secondary">Cancel</a>
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" name="name" class="form-control" value="{{ category.name }}" required>
+    </div>
+    <div class="form-group">
+        <label for="description">Description:</label>
+        <textarea name="description" class="form-control">{{ category.description }}</textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Update Category</button>
 </form>
+<a href="{% url 'category_detail' category.slug %}" class="btn btn-secondary mt-3">Cancel</a>
 {% endblock %}
