--- a/store_manager/apps/products/templates/delete_subcategory.html
+++ b/store_manager/apps/products/templates/delete_subcategory.html
@@ -10,6 +10,7 @@
 <form method="POST">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes, Delete</button>
-    <a href="{% url 'subcategory_detail' subcategory.id %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'subcategory_detail' subcategory.slug %}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
+
