--- a/store_manager/apps/products/templates/edit_subcategory.html
+++ b/store_manager/apps/products/templates/edit_subcategory.html
@@ -11,11 +11,10 @@
         <label for="name" class="form-label">Subcategory Name</label>
         <input type="text" class="form-control" id="name" name="name" value="{{ subcategory.name }}" required>
     </div>
-
+    
     <button type="submit" class="btn btn-primary">Save Changes</button>
 </form>
 
-<a href="{% url 'subcategory_detail' subcategory.id %}" class="btn btn-secondary mt-3">
-    Cancel
-</a>
+<a href="{% url 'subcategory_detail' subcategory.slug %}" class="btn btn-secondary mt-3">Cancel</a>
+
 {% endblock %}
