--- a/store_manager/apps/products/templates/product_list.html
+++ b/store_manager/apps/products/templates/product_list.html
@@ -5,9 +5,9 @@
 {% block content %}
 <h1>Product List for {{ subcategory.name }}</h1>
 
-<!-- Botão para Adicionar Novo Produto -->
+<!-- Button to Add New Product -->
 <div class="mb-3">
-    <a href="{% url 'add_product' subcategory.id %}" class="btn btn-primary">
+    <a href="{% url 'register_product' subcategory.slug %}" class="btn btn-primary">
         Add New Product
     </a>
 </div>
@@ -34,8 +34,8 @@
                         {% endfor %}
                     </ul>
 
-                    <!-- Botão para Visualizar Detalhes -->
-                    <a href="{% url 'product_details' product.id %}" class="btn btn-info btn-sm mt-3">
+                    <!-- Button to View Details -->
+                    <a href="{% url 'product_detail' product.slug %}" class="btn btn-info btn-sm mt-3">
                         View Details
                     </a>
                 </div>
@@ -46,12 +46,12 @@
     {% endfor %}
 </div>
 
-<!-- Botão para Voltar à Lista de Subcategorias -->
-<a href="{% url 'subcategory_list' subcategory.category.id %}" class="btn btn-secondary mt-3">
+<!-- Button to Go Back to Subcategory List -->
+<a href="{% url 'subcategory_list' subcategory.category.slug %}" class="btn btn-secondary mt-3">
     Back to Subcategory List
 </a>
 
-<!-- Botão para o Menu -->
+<!-- Home button -->
 <a href="{% url 'menu' %}" class="btn btn-secondary mt-3">
     <i class="fas fa-home"></i> Menu
 </a>
