--- a/store_manager/apps/products/templates/subcategory_list.html
+++ b/store_manager/apps/products/templates/subcategory_list.html
@@ -5,9 +5,9 @@
 {% block content %}
 <h1>Subcategory List for {{ category.name }}</h1>
 
-<!-- Botão para Registrar Nova Subcategoria -->
+<!-- Button to Register New Subcategory -->
 <div class="mb-3">
-    <a href="{% url 'register_subcategory' category.id %}" class="btn btn-primary">
+    <a href="{% url 'register_subcategory' category.slug %}" class="btn btn-primary">
         Register New Subcategory
     </a>
 </div>
@@ -15,11 +15,10 @@
 <ul class="list-group">
     {% for subcategory in subcategories %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            <a href="{% url 'product_list' subcategory.id %}" class="text-decoration-none">
+            <a href="{% url 'product_list' subcategory.slug %}" class="text-decoration-none">
                 {{ subcategory.name }}
             </a>
-
-            <a href="{% url 'subcategory_detail' subcategory.id %}" class="btn btn-info btn-sm">
+            <a href="{% url 'subcategory_detail' subcategory.slug %}" class="btn btn-info btn-sm">
                 View Details
             </a>
         </li>
@@ -28,12 +27,12 @@
     {% endfor %}
 </ul>
 
-<!-- Botão para Voltar à Lista de Categorias -->
-<a href="{% url 'category_list' category.branch.id %}" class="btn btn-secondary mt-3">
+<!-- Button to Go Back to Category List -->
+<a href="{% url 'category_list' category.branch.id %}" class="btn btn-secondary mt-3"> <!-- Use branch.id here -->
     Back to Category List
 </a>
 
-<!-- Botão para o Menu -->
+<!-- Home button -->
 <a href="{% url 'menu' %}" class="btn btn-secondary mt-3">
     <i class="fas fa-home"></i> Menu
 </a>
